<resources>
    <string name="app_name">Covid19</string>
    <string name="tv_new_confirmed">New Confirmed: </string>
    <string name="tv_total_confirmed">Confirmed</string>
    <string name="tv_new_death">New Death: </string>
    <string name="tv_total_death">Death</string>
    <string name="tv_new_recovered">New Recovered: </string>
    <string name="tv_total_recovered">Recovered</string>
    <string name="tv_date">Updated at: %s</string>
    <string name="tv_countries">Countries</string>
    <string name="tab_sort">Sort</string>
    <string name="tab_search">Search</string>
    <string name="ed_search_country">Search Country</string>
</resources>