<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="globalBinding"
            type="com.n2n.covid19.ui.main.MainViewModel" />
    </data>

    <com.n2n.covid19.util.CollapsibleToolbar
        android:id="@+id/main_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        android:minHeight="90dp"
        android:padding="@dimen/size_8"
        app:layoutDescription="@xml/motion_scene"
        app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed">

        <TextView
            android:id="@+id/tv_global"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_8"
            android:text="Global"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_new_confirmed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_new_confirmed"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_new_confirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/size_8"
            android:paddingEnd="@dimen/size_8"
            android:text="@{globalBinding.global.newConfirmed}"
            tools:text="100" />

        <TextView
            android:id="@+id/tv_total_confirmed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_total_confirmed"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_total_confirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/size_8"
            android:paddingEnd="@dimen/size_8"
            android:text="@{globalBinding.global.totalConfirmed}"
            tools:text="100" />

        <TextView
            android:id="@+id/tv_new_death_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_new_death"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_new_death"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/size_8"
            android:paddingEnd="@dimen/size_8"
            android:text="@{globalBinding.global.newDeath}"
            tools:text="100" />

        <TextView
            android:id="@+id/tv_total_death_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_total_death"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_total_death"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/size_8"
            android:paddingEnd="@dimen/size_8"
            android:text="@{globalBinding.global.totalDeath}"
            tools:text="100" />

        <TextView
            android:id="@+id/tv_new_recovered_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_new_recovered"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_new_recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/size_8"
            android:paddingEnd="@dimen/size_8"
            android:text="@{globalBinding.global.newRecovered}"
            tools:text="100" />

        <TextView
            android:id="@+id/tv_total_recovered_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_total_recovered"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_total_recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/size_8"
            android:paddingEnd="@dimen/size_8"
            android:text="@{globalBinding.global.totalRecovered}"
            tools:text="100" />

    </com.n2n.covid19.util.CollapsibleToolbar>
</layout>