<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="country"
            type="com.n2n.covid19.model.summary.SummaryCountryView" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8"
        app:cardCornerRadius="@dimen/size_5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_8">

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{country.country}"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="USA" />

            <TextView
                android:id="@+id/tv_total_confirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{country.totalConfirmed}"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_country"
                tools:text="1000" />

            <TextView
                android:id="@+id/tv_total_confirmed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_total_confirmed"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_total_confirmed"
                app:layout_constraintStart_toStartOf="@id/tv_total_confirmed"
                app:layout_constraintTop_toBottomOf="@id/tv_total_confirmed" />

            <TextView
                android:id="@+id/tv_total_death"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_5"
                android:text="@{country.totalDeath}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tv_total_confirmed_title"
                tools:text="100" />

            <TextView
                android:id="@+id/tv_total_death_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_total_death"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_total_death"
                app:layout_constraintStart_toStartOf="@id/tv_total_death"
                app:layout_constraintTop_toBottomOf="@+id/tv_total_death" />


            <TextView
                android:id="@+id/tv_total_recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_5"
                android:text="@{country.totalRecovered}"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_total_confirmed_title"
                tools:text="10" />

            <TextView
                android:id="@+id/tv_total_recovered_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_total_recovered"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_total_recovered"
                app:layout_constraintStart_toStartOf="@+id/tv_total_recovered"
                app:layout_constraintTop_toBottomOf="@+id/tv_total_recovered" />

            <TextView
                android:id="@+id/tv_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_date"
                android:textStyle="italic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_total_death_title" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_5"
                android:text="@{country.date}"
                app:layout_constraintStart_toEndOf="@+id/tv_date_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_total_death_title"
                tools:text="123"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>