<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/size_8">

    <TextView
        android:id="@+id/tv_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_8"
        android:text="@string/tv_sort"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_death_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_8"
        android:background="@color/color_death_50"
        android:padding="@dimen/size_8"
        android:text="@string/tv_total_death"
        android:textColor="@color/text_title"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sort" />

    <ImageView
        android:id="@+id/imv_death_descending"
        android:layout_width="@dimen/size_32"
        android:layout_height="@dimen/size_32"
        android:layout_marginTop="@dimen/size_8"
        android:src="@drawable/ic_sort_descending"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_death_title" />

    <ImageView
        android:id="@+id/imv_death_ascending"
        android:layout_width="@dimen/size_32"
        android:layout_height="@dimen/size_32"
        android:layout_marginTop="@dimen/size_8"
        android:src="@drawable/ic_sort_ascending"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_death_title" />

    <TextView
        android:id="@+id/tv_recover_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8"
        android:background="@color/color_recover_50"
        android:padding="@dimen/size_8"
        android:text="@string/tv_total_recovered"
        android:textColor="@color/text_title"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imv_death_ascending" />

    <ImageView
        android:id="@+id/imv_recovered_descending"
        android:layout_width="@dimen/size_32"
        android:layout_height="@dimen/size_32"
        android:layout_marginTop="@dimen/size_8"
        android:src="@drawable/ic_sort_descending"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_recover_title" />

    <ImageView
        android:id="@+id/imv_recovered_ascending"
        android:layout_width="@dimen/size_32"
        android:layout_height="@dimen/size_32"
        android:layout_marginTop="@dimen/size_8"
        android:src="@drawable/ic_sort_ascending"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recover_title" />

    <TextView
        android:id="@+id/tv_confirm_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8"
        android:background="@color/color_confirmed_50"
        android:padding="@dimen/size_8"
        android:text="@string/tv_total_confirmed"
        android:textColor="@color/text_title"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imv_recovered_ascending" />

    <ImageView
        android:id="@+id/imv_confirm_descending"
        android:layout_width="@dimen/size_32"
        android:layout_height="@dimen/size_32"
        android:layout_marginTop="@dimen/size_8"
        android:src="@drawable/ic_sort_descending"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirm_title" />

    <ImageView
        android:id="@+id/imv_confirm_ascending"
        android:layout_width="@dimen/size_32"
        android:layout_height="@dimen/size_32"
        android:layout_marginTop="@dimen/size_8"
        android:src="@drawable/ic_sort_ascending"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirm_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>